--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://<rokamba>.github.io/react-website",
+  "homepage": "http://rokamba.github.io/react-website",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -9,16 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
